--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>idk</title>
+<link rel="stylesheet" href="./style.css">
 </head>
 <body style="overflow:hidden">
 <script src="src/main.js" type="module"></script>
