--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>idk</title>
-<link rel="stylesheet" href="./style.css">
-</head>
-<body style="overflow:hidden">
-<script src="src/main.js" type="module"></script>
-</body>
+    <head>
+        <title>idk</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body style="overflow: hidden">
+        <script src="src/main.js" type="module"></script>
+    </body>
 </html>
