--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
     <head>
         <title>idk</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
-            rel="stylesheet"
-        />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
+
+            body {
+                font-family: "Pixelify Sans", sans-serif;
+                margin: 0;
+                overflow: hidden;
+                background-color: black;
+            }
+
+            canvas {
+                display: block;
+            }
+        </style>
     </head>
     <body style="overflow: hidden">
         <script src="src/main.js" type="module"></script>
